--- a/html/mi-app/src/css/usuarios.css
+++ b/html/mi-app/src/css/usuarios.css
@@ -16,10 +16,13 @@
   font-style: italic;
 }
 
+
+
 .usuarios-table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
+  color:black;
   background: white;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
@@ -32,6 +35,7 @@
 }
 
 .usuarios-table th {
+  color: black;
   background-color: #f4f4f4;
   font-weight: bold;
 }
